--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-    background-color: #16191c;
+    background-color: #22272B;
     height: 100vh;
     width: 100vw;
+    color: #fafafa;
+}
+.Header {
+    background:#16191C;
+    height:72px;
 }
