--- a/src/pages/Scheme/style.module.css
+++ b/src/pages/Scheme/style.module.css
@@ -1,29 +1,37 @@
 .SchemePage {
 
 }
+
 .Tabs {
     padding: 8px;
 }
+
 .Header {
     padding: 0px 16px;
 }
+
 .Content {
-    display:flex;
-    padding: 0px 16px;
+    display: flex;
+    padding: 8px 16px 0;
+    justify-content: space-between;
 }
+
 .ButtonStructure {
     margin-right: 12px;
 }
+
 .ButtonData {
     margin-right: 12px;
 }
-.Content {
-    display:flex;
-    justify-content:space-between;
-}
-.LeftPanel {
 
+.LeftPanel {
+    display: flex;
+    height: 100vh;
+    flex: 1 1;
+    padding-right: 8px;
+    border: none;
 }
+
 .RightPanel {
-    max-width:400px;
+    max-width: 400px;
 }
