--- a/src/components/ExcelTable/DraggableHeader/DraggableHeader.module.css
+++ b/src/components/ExcelTable/DraggableHeader/DraggableHeader.module.css
@@ -15,6 +15,17 @@
     display: flex;
 }
 
+.HeaderId {
+    display: flex;
+    color: rgba(255, 255, 255, 0.3);
+    opacity: 0.8;
+    padding-right: 8px;
+}
+
+.CalcParamHeader {
+    justify-content: space-between;
+}
+
 .WrapperText {
     display: flex;
     overflow: hidden;
