--- a/src/components/ExcelTable/react-data-grid.css
+++ b/src/components/ExcelTable/react-data-grid.css
@@ -7,7 +7,7 @@
     background-color: #22272b;
     border-radius: 2px;
     box-sizing: border-box;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25), 0px 0px 3px rgba(0, 0, 0, 0.25), 0px 2px 6px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 0 3px rgba(0, 0, 0, 0.25), 0 2px 6px rgba(0, 0, 0, 0.25);
 }
 
 .rdg-text-editor:focus {
