--- a/src/pages/Scheme/components/DistributionChart/DistributionChart.css
+++ b/src/pages/Scheme/components/DistributionChart/DistributionChart.css
@@ -1,10 +1,54 @@
+.chart {
+  background-color: #16191c;
+}
+
 .grid line {
   stroke: #fff;
-  stroke-dasharray: 6;
+  stroke-dasharray: 1, 3;
+  stroke-width: 1;
   stroke-opacity: 0.1;
-  shape-rendering: crispEdges;
+  stroke-linecap: round;
+}
+
+.grid text {
+  font-size: 12px;
+
+  color: rgba(246, 251, 253, 0.6);
+
+  transform: translateY(10px);
 }
 
 .grid path {
   stroke-width: 0;
+}
+
+.axis {
+  fill: none;
+
+  .domain {
+    stroke: rgba(246, 251, 253, 0.28);
+  }
+
+  line {
+    stroke: rgba(246, 251, 253, 0.28);
+  }
+
+  text {
+    font-size: 12px;
+    line-height: 17px;
+  }
+
+  &_left text {
+    color: #e68200;
+  }
+
+  &_right text {
+    color: #33b4ff;
+
+    transform: translateX(5px);
+  }
+
+  &_right path {
+    stroke-width: 0;
+  }
 }
