--- a/src/components/ExcelTable/ExcelTable.css
+++ b/src/components/ExcelTable/ExcelTable.css
@@ -35,6 +35,27 @@
     border-right: none;
     border-bottom-color: rgba(255, 255, 255, 0.2);
 
+    &__Value.is-error {
+      position: absolute;
+      z-index: 1;
+      top: 2px;
+      left: 2px;
+      bottom: 2px;
+
+      padding: 0 8px;
+
+      display: inline-block;
+      overflow: hidden;
+
+      width: calc(100% - 4px);
+      height: calc(100% - 4px);
+
+      white-space: nowrap;
+      text-overflow: ellipsis;
+
+      border: 1px solid #f00;
+    }
+
     &__Id {
       text-align: end;
 
