--- a/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
+++ b/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
@@ -5,7 +5,7 @@
 
 .Grid {
   display: grid;
-  grid-template: 100px 1fr / 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .Form {
