--- a/src/components/ExcelTable/Input/Input.module.css
+++ b/src/components/ExcelTable/Input/Input.module.css
@@ -1,12 +1,12 @@
 .Root {
-  padding: 8px 0;
+  padding: var(--space-xs) 0;
 
-  font-size: 12px;
+  font-size: var(--size-text-xs);
 
-  color: #fff;
-  background-color: #22272b;
+  color: var(--color-typo-primary);
+  background-color: var(--color-bg-default);
   border: none;
-  caret-color: #fff;
+  caret-color: var(--color-typo-primary);
 }
 
 .Root:focus {
