--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #22272b;
+  background-color: var(--color-bg-default);
 }
