--- a/src/pages/Scheme/components/DistributionChart/DistributionChart.css
+++ b/src/pages/Scheme/components/DistributionChart/DistributionChart.css
@@ -1,9 +1,9 @@
 .chart {
-  background-color: #16191c;
+  background-color: var(--color-bg-secondary);
 }
 
 .grid line {
-  stroke: #fff;
+  stroke: var(--color-control-typo-primary);
   stroke-dasharray: 1, 3;
   stroke-width: 1;
   stroke-opacity: 0.1;
@@ -11,9 +11,9 @@
 }
 
 .grid text {
-  font-size: 12px;
+  font-size: var(--size-text-xs);
 
-  color: rgba(246, 251, 253, 0.6);
+  color: var(--color-typo-secondary);
 
   transform: translateY(10px);
 }
@@ -26,24 +26,24 @@
   fill: none;
 
   .domain {
-    stroke: rgba(246, 251, 253, 0.28);
+    stroke: var(--color-control-bg-border-default);
   }
 
   line {
-    stroke: rgba(246, 251, 253, 0.28);
+    stroke: var(--color-control-bg-border-default);
   }
 
   text {
-    font-size: 12px;
-    line-height: 17px;
+    font-size: var(--size-text-xs);
+    line-height: var(--line-height-text-xs);
   }
 
   &_left text {
-    color: #e68200;
+    color: var(--color-typo-warning);
   }
 
   &_right text {
-    color: #33b4ff;
+    color: var(--color-typo-normal);
 
     transform: translateX(5px);
   }
