feat(components): updated the design of validation on the distribution form
Jira issue: VEGA-1483

--- a/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
+++ b/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
@@ -4,6 +4,10 @@
 }
 
 .Grid {
+  position: relative;
+
+  margin-bottom: 60px;
+
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
@@ -12,6 +16,19 @@
   margin: 20px 0;
 }
 
-.TextField__error {
+.Field {
+  position: relative;
+}
+
+.Field__ErrorMessage {
+  bottom: -30px;
+  position: absolute;
+  font-size: 10px;
+  line-height: 12px;
+
+  color: #ed4545;
+}
+
+.TextField__Error {
   border-color: #cd3939;
 }
