--- a/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
+++ b/src/pages/Scheme/components/DistributionSettingsForm/DistributionSettingsForm.module.css
@@ -20,9 +20,14 @@
   position: relative;
 }
 
+.Field__Label {
+  margin-bottom: 5px;
+}
+
 .Field__ErrorMessage {
-  bottom: -30px;
   position: absolute;
+  bottom: -30px;
+
   font-size: 10px;
   line-height: 12px;
 
