--- a/src/pages/Scheme/components/DistributionChart/DistributionChart.css
+++ b/src/pages/Scheme/components/DistributionChart/DistributionChart.css
@@ -1,54 +1,71 @@
-.chart {
+.DistributionChart {
   background-color: var(--color-bg-secondary);
-}
 
-.grid line {
-  stroke: var(--color-control-typo-primary);
-  stroke-dasharray: 1, 3;
-  stroke-width: 1;
-  stroke-opacity: 0.1;
-  stroke-linecap: round;
-}
-
-.grid text {
-  font-size: var(--size-text-xs);
-
-  color: var(--color-typo-secondary);
-
-  transform: translateY(10px);
-}
-
-.grid path {
-  stroke-width: 0;
-}
-
-.axis {
-  fill: none;
-
-  .domain {
-    stroke: var(--color-control-bg-border-default);
+  &__Percentiles {
+    &__Text {
+      font-size: var(--size-text-xs);
+      fill: var(--color-typo-primary);
+    }
   }
 
-  line {
-    stroke: var(--color-control-bg-border-default);
+  &__ProjectionLines {
+    fill: none;
+    stroke: var(--color-typo-warning);
+    stroke-width: 1;
+
+    opacity: 0.3;
   }
 
-  text {
-    font-size: var(--size-text-xs);
-    line-height: var(--line-height-text-xs);
+  &__Grid {
+    line {
+      stroke: var(--color-control-typo-primary);
+      stroke-dasharray: 1, 3;
+      stroke-width: 1;
+      stroke-opacity: 0.1;
+      stroke-linecap: round;
+    }
+
+    text {
+      font-size: var(--size-text-xs);
+
+      color: var(--color-typo-secondary);
+
+      transform: translateY(10px);
+    }
+
+    path {
+      stroke-width: 0;
+    }
   }
 
-  &_left text {
-    color: var(--color-typo-warning);
-  }
+  &__Axis {
+    fill: none;
 
-  &_right text {
-    color: var(--color-typo-normal);
+    .domain {
+      stroke: var(--color-control-bg-border-default);
+    }
 
-    transform: translateX(5px);
-  }
+    line {
+      stroke: var(--color-control-bg-border-default);
+    }
 
-  &_right path {
-    stroke-width: 0;
+    text {
+      font-size: var(--size-text-xs);
+      line-height: var(--line-height-text-xs);
+    }
+
+    &_position_left text {
+      color: var(--color-typo-warning);
+    }
+
+    &_position_right text {
+      color: var(--color-typo-normal);
+
+      transform: translateX(5px);
+    }
+
+    &_position_right path {
+      stroke-width: 0;
+    }
   }
 }
