refactor(HierarchyLevelList): add icon for HierarchyLevelItem, remove console.log

--- a/src/pages/Scheme/components/HierarchyLevelList/HierarchyLevelList.css
+++ b/src/pages/Scheme/components/HierarchyLevelList/HierarchyLevelList.css
@@ -107,7 +107,12 @@
     &__Title {
       margin-bottom: 8px;
 
+      display: grid;
+      align-items: center;
+
       color: var(--color-typo-primary);
+      grid-template-columns: 12px 3fr;
+      grid-column-gap: 9px;
 
       &__Input {
         display: flex;
