--- a/src/components/ContextMenu/ContextMenu.css
+++ b/src/components/ContextMenu/ContextMenu.css
@@ -1,4 +1,11 @@
 .ContextMenu {
+  z-index: 100;
+
+  margin: 2px 0 0;
+  padding: 5px 0;
+
+  min-width: 160px;
+
   &__Item {
     display: flex;
     justify-content: flex-start;
