VEGA-1483: Distribution parameter validation results display (#9)
* feature(chart): update chart styles

* fix(chart): swapped the axes on the chart.

* fix(eslint): add eslint-import-resolver-typescript

* fix(styles): fix build errors

* refactor(code-style): update code by comments to the PR

* refactor(code-style): update code by comments to the PR

* fix(build): fix merge conflict

* feature(table-validation): added the error output to the table

* refactor(component): create CellWithError component, update code style

* refactor(components): поправил замечания к PR

* feat(components): updated the design of validation on the distribution form

Jira issue: VEGA-1483

* refactor(components): update PR by comments

Co-authored-by: Rodion.Lunev <rodion.lunev@nexign.com>

--- a/src/components/ExcelTable/ExcelTable.css
+++ b/src/components/ExcelTable/ExcelTable.css
@@ -37,24 +37,7 @@
     border-bottom-color: var(--color-bg-border);
 
     &__Value.is-error {
-      position: absolute;
-      z-index: 1;
-      top: var(--space-3xs);
-      left: var(--space-3xs);
-      bottom: var(--space-3xs);
-
-      padding: 0 var(--space-xs);
-
-      display: inline-block;
-      overflow: hidden;
-
-      width: calc(100% - 4px);
-      height: calc(100% - 4px);
-
-      white-space: nowrap;
-      text-overflow: ellipsis;
-
-      border: var(--control-border-width) solid var(--color-bg-alert);
+      color: var(--color-typo-alert);
     }
 
     &__Id {
