--- a/src/components/ExcelTable/ExcelTable.css
+++ b/src/components/ExcelTable/ExcelTable.css
@@ -38,6 +38,10 @@
 
     &__Value.is-error {
       color: var(--color-typo-alert);
+
+      &::after {
+        content: '—';
+      }
     }
 
     &__Id {
