VEGA-647: Исправить стили после перехода на РБ
* fix(vega-ui): исправить конфликт стилей

Убрал сборку стилей из vega-ui
Заменил импорты отдельных пакетов на общий @gpn-prototypes/vega-ui

Jira issue: VEGA-647

* chore(vega-ui): обновить версию

Jira issue: VEGA-647

--- a/src/pages/Scheme/components/DistributionSettings/components/DistributionSettingsForm/DistributionSettingsForm.css
+++ b/src/pages/Scheme/components/DistributionSettings/components/DistributionSettingsForm/DistributionSettingsForm.css
@@ -1,10 +1,10 @@
 .DistributionSettingsForm {
-  margin: var(--space-l) 0;
+  margin-top: var(--space-l);
 
   &__Grid {
     position: relative;
 
-    margin-bottom: var(--space-4xl);
+    margin-bottom: var(--space-s);
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
