--- a/src/pages/Scheme/components/DistributionSettings/components/DistributionSettingsFormField/DistributionSettingsFormField.css
+++ b/src/pages/Scheme/components/DistributionSettings/components/DistributionSettingsFormField/DistributionSettingsFormField.css
@@ -1,6 +1,8 @@
 .DistributionSettingsFormField {
   position: relative;
 
+  margin-bottom: var(--space-3xl);
+
   display: grid;
 
   &.is-error {
@@ -8,7 +10,8 @@
   }
 
   &__ErrorMessage {
-    padding-top: var(--space-2xs);
+    position: absolute;
+    bottom: -34px;
 
     font-size: var(--size-text-2xs);
     line-height: var(--line-height-text-2xs);
