--- a/src/pages/Scheme/Scheme.module.css
+++ b/src/pages/Scheme/Scheme.module.css
@@ -35,7 +35,10 @@
 }
 
 .RightPanel {
-  padding: var(--space-m);
+  padding: var(--space-s);
+
+  overflow-y: auto;
 
   max-width: 400px;
+  height: 100vh;
 }
