fix(VEGA-1834): Интерфейс управления составом уровней иерархий

--- a/src/components/HierarchyLevelList/HierarchyLevelList.css
+++ b/src/components/HierarchyLevelList/HierarchyLevelList.css
@@ -4,6 +4,10 @@
 
   height: 100%;
 
+  &__Icon {
+    color: var(--color-bg-success);
+  }
+
   &__Content {
     margin-bottom: var(--space-2xs);
   }
