--- a/src/components/ExcelTable/StyledRow/StyledRow.css
+++ b/src/components/ExcelTable/StyledRow/StyledRow.css
@@ -4,6 +4,10 @@
 
   color: var(--color-typo-primary);
 
+  &:hover {
+    background-color: rgb(75, 81, 84);
+  }
+
   &__Even {
     background-color: var(--color-bg-default);
   }
@@ -11,8 +15,35 @@
   &__Odd {
     background-color: rgb(60, 64, 67);
   }
-}
 
-.StyledRow:hover {
-  background-color: rgb(75, 81, 84);
+  &.is-error {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: var(--color-bg-alert);
+      top: -1px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: var(--color-bg-alert);
+      bottom: 0;
+    }
+
+    & > * {
+      border-bottom-color: var(--color-bg-alert);
+      border-top-color: var(--color-bg-alert);
+    }
+
+    & > :nth-child(1) {
+      background-color: var(--color-bg-alert);
+    }
+  }
 }
