--- a/src/components/ExcelTable/StyledRow/StyledRow.css
+++ b/src/components/ExcelTable/StyledRow/StyledRow.css
@@ -4,10 +4,6 @@
 
   color: var(--color-typo-primary);
 
-  &:hover {
-    background-color: rgb(75, 81, 84);
-  }
-
   &__Even {
     background-color: var(--color-bg-default);
   }
@@ -21,29 +17,37 @@
 
     &::before {
       content: '';
+      display: block;
       position: absolute;
       width: 100%;
       height: 1px;
       background-color: var(--color-bg-alert);
       top: -1px;
+      z-index: 1;
     }
 
     &::after {
       content: '';
+      display: block;
       position: absolute;
       width: 100%;
       height: 1px;
       background-color: var(--color-bg-alert);
       bottom: 0;
-    }
-
-    & > * {
-      border-bottom-color: var(--color-bg-alert);
-      border-top-color: var(--color-bg-alert);
+      z-index: 1;
     }
 
     & > :nth-child(1) {
       background-color: var(--color-bg-alert);
+      border-right: solid 3px #4e5255;
+    }
+
+    & > :nth-child(2) {
+      border-left: 1px solid var(--color-bg-alert);
     }
   }
+}
+
+.StyledRow:hover {
+  background-color: rgb(75, 81, 84);
 }
